--- a/Commandable/UnitTest/UnitTest.csproj
+++ b/Commandable/UnitTest/UnitTest.csproj
@@ -54,6 +54,16 @@
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Commandable\Commandable.csproj">
+      <Project>{489277a4-8180-4a59-97fd-03e63edbd2fe}</Project>
+      <Name>Commandable</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\TestConsole\TestConsole.csproj">
+      <Project>{b461fa2a-4023-4cf7-ae19-58139e7321cb}</Project>
+      <Name>TestConsole</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets" Condition="Exists('$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets')" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
