Install KTools.VersionIncrement

--- a/Commandable/Commandable/Commandable.csproj
+++ b/Commandable/Commandable/Commandable.csproj
@@ -44,5 +44,9 @@
     <Compile Include="Class1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="KTools.VersionIncrement.ps1" />
+    <None Include="packages.config" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
