--- a/Commandable/Commandable/Commandable.csproj
+++ b/Commandable/Commandable/Commandable.csproj
@@ -48,5 +48,9 @@
     <None Include="KTools.VersionIncrement.ps1" />
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="NuGetPackup.exe" />
+    <Content Include="Package.nuspec.xml" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
