--- a/Commandable/Commandable/packages.config
+++ b/Commandable/Commandable/packages.config
@@ -1,4 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Keiho.Tools.NuGetPackup" version="1.0.11.0" targetFramework="net45" />
   <package id="KTools.VersionIncrement" version="1.2.4" targetFramework="net45" />
+  <package id="NuGet.CommandLine" version="1.0.11220.26" targetFramework="net45" />
 </packages>
