Upgrade NuGet.CommandLine

--- a/Commandable/Commandable/packages.config
+++ b/Commandable/Commandable/packages.config
@@ -2,5 +2,5 @@
 <packages>
   <package id="Keiho.Tools.NuGetPackup" version="1.0.11.0" targetFramework="net45" />
   <package id="KTools.VersionIncrement" version="1.2.4" targetFramework="net45" />
-  <package id="NuGet.CommandLine" version="1.0.11220.26" targetFramework="net45" />
+  <package id="NuGet.CommandLine" version="4.4.1" targetFramework="net45" developmentDependency="true" />
 </packages>
