--- a/Commandable/Commandable/Commandable.csproj
+++ b/Commandable/Commandable/Commandable.csproj
@@ -45,6 +45,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="CreatePackage.ps1" />
     <None Include="KTools.VersionIncrement.ps1" />
     <None Include="packages.config" />
   </ItemGroup>
