Add helper classes

--- a/Commandable/Commandable/Commandable.csproj
+++ b/Commandable/Commandable/Commandable.csproj
@@ -42,6 +42,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Attributes.cs" />
+    <Compile Include="Core\Enumerable2.cs" />
+    <Compile Include="Core\ObjectHelper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
